syntax = "proto3";

package alcs_application;

service AlcsApplicationService {
  rpc create(ApplicationCreateGrpc) returns (ApplicationGrpc);
}

message ApplicationGrpc {
  string fileNumber = 1;

  string applicant = 2;

  int32 dateSubmittedToAlc = 3;

  string regionCode = 4;

  string localGovernmentUuid = 5;

  string typeCode = 6;
}

message ApplicationCreateGrpc {
  string fileNumber = 1;

  string applicant = 2;

  string typeCode = 3;

  string dateSubmittedToAlc = 4;

  string localGovernmentUuid = 5;
}